--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -119,7 +119,7 @@ It is imperative to note that these sets are selected prior to examining the aut
 \begin{figure*}
 \centering
 \includegraphics[width=0.95\textwidth]{nbar_mocks.pdf}
-\caption{The mean density contrast of the DESI LRG targets as a function of the imaging systematic maps: Galactic extinction (EBV), stellar density (nStar), depth in \textit{grzw1} (depth$_{grzw1}$), and seeing in \textit{grz} (psfsize$_{grz}$). The black curves display the results before imaging systematic correction. The red, blue and orange curves represent the relationships after applying the imaging weights from the linear models trained with \textit{eight maps}, \textit{two maps}, and \textit{three maps}. The green and pink curves display the results after applying the imaging weights from the nonlinear models trained with \textit{three maps} and \textit{four maps}. The dark and light shades represent the $68\%$ dispersion of 1000 lognormal mocks with $\fnl=0$ and $76.9$, respectively.}\label{fig:nbarmock}
+\caption{The mean density contrast of the DESI LRG targets as a function of the imaging systematic maps: Galactic extinction (EBV), stellar density (nStar), depth in \textit{grzw1} (depth$_{grzw1}$), and seeing in \textit{grz} (psfsize$_{grz}$). The black curves display the results before imaging systematic correction. \mr{The red, blue and orange curves represent the relationships after applying the imaging weights from the linear models trained with \textit{two maps}, \textit{three maps}, and \textit{eight maps}, respectively}. The green and pink curves display the results after applying the imaging weights from the nonlinear models trained with \textit{three maps} and \textit{four maps}. The dark and light shades represent the $68\%$ dispersion of 1000 lognormal mocks with $\fnl=0$ and $76.9$, respectively.}\label{fig:nbarmock}
 \end{figure*}
 
 
@@ -147,7 +147,7 @@ With this normalization, $\tilde{C}_{x_{i}}$ estimates the contribution of syste
 \end{equation}
 where the covariance matrix $\mathbb{C}_{X} = < \tilde{C}_{X, \ell} \tilde{C}_{X, \ell'} >$ is constructed from the lognormal mocks. These $\chi^{2}$ values are measured for every clean mock realization with the \textit{leave-one-out} technique and compared to the values observed in the LRG sample with various imaging systematic corrections. Specifically, we use 999 realizations to estimate a covariance matrix and then apply the covariance matrix from the 999 realizations to measure the $\chi^{2}$ for the one remaining realization. This process is repeated for all 1000 realizations to construct a histogram for $\chi^{2}$. We only include the bandpower bins from $\ell=2$ to $20$ with $\Delta\ell=2$, and test for the robustness with higher $\ell$ modes in Appendix \ref{sec:scalesys}. 
 
-We identify extinction and depth in the z band as two primary maps, and run the linear model with these two maps to derive the systematic weights. Linear two maps is the most conservative method in terms of both the model flexibility and the number of input maps. We clean the sample using the imaging weights obtained from \textit{linear two maps}, and find that the linear two maps approach mitigates most of the spurious density fluctuations and reduces the cross-correlations between the LRG density and the imaging systematic maps, except for the trends against psfsize in the r and z bands. Adding the r-band psfsize improves the linear model performance such that the cross correlations are similar to those obtained from \textit{linear eight maps}, which indicates no further information can be extracted from eight maps. Therefore, we identify extinction, depth in z, and psfsize in r (\textit{three maps}) as the primary sources of systematic effects in the DESI LRG targets. Then, we adapt \textit{neural network three maps} to model non-linear systematic effects, and find that the neural network-based weights significantly reduce the cross correlations and spurious density fluctuations of the DESI LRG sample and imaging systematic maps. Additionally, we consider neural network with four, five, and nine maps to further examine the robustness of our cleaning methods. Figure \ref{fig:clxmock} shows $\tilde{C}_{X}$ from the DESI LRG targets before and after applying various corrections for imaging systematics. The dark and light shades show the 97.5$^{\rm th}$ percentile from the $\fnl=0$ and $76.9$ mocks, respectively. Without imaging weights, the LRG sample has the highest cross-correlations against extinction, stellar density, and depth in z (solid black curve). There is less significant correlations against depth in the g and r bands, and psfsize in the z band, which could be driven because of the inner correlations between the imaging systematic maps. First, we consider cleaning the sample with the linear model using two maps (extinction and depth in r) as identified from the Pearson correlation. With linear two maps (dot-dashed blue curve), most of the cross power signals are reduced below statistical uncertainties, especially against extinction, stellar density, and depth. However, the cross power spectra against psfsize in r and z increases slightly on $6<\ell<20$ and $6<\ell<14$, respectively. Very likely, large-scale cross correlations ($\ell < 6$) are reduced using extinction and depth in the z-band, but there are some residual cross correlations on smaller scales ($\ell > 6$) which cannot be mitigated with our set of two maps. The linear three maps (dotted orange curve) approach alleviates the cross power spectrum against psfsize in r. On the other hand, nonlinear three maps can reduce the cross correlations against both the r and z-band psfsize maps, which indicates the benefit of using a nonlinear approach. For benchmark, we also show the normalized cross spectra after cleaning the LRG sample with linear eight maps and nonlinear four maps. 
+We identify extinction and depth in the z band as two primary maps, and run the linear model with these two maps to derive the systematic weights. Linear two maps is the most conservative method in terms of both the model flexibility and the number of input maps. We clean the sample using the imaging weights obtained from \textit{linear two maps}, and find that the linear two maps approach mitigates most of the spurious density fluctuations and reduces the cross-correlations between the LRG density and the imaging systematic maps, except for the trends against psfsize in the r and z bands. Adding the r-band psfsize improves the linear model performance such that the cross correlations are similar to those obtained from \textit{linear eight maps}, which indicates no further information can be extracted from eight maps. Therefore, we identify extinction, depth in z, and psfsize in r (\textit{three maps}) as the primary sources of systematic effects in the DESI LRG targets. Then, we adapt \textit{neural network three maps} to model non-linear systematic effects. \mr{Compared with the linear three maps method, we} find that the neural network-based weights significantly reduce the cross correlations and spurious density fluctuations of the DESI LRG sample and imaging systematic maps. Additionally, we consider neural network with four, five, and nine maps to further examine the robustness of our cleaning methods. Figure \ref{fig:clxmock} shows $\tilde{C}_{X}$ from the DESI LRG targets before and after applying various corrections for imaging systematics. The dark and light shades show the 97.5$^{\rm th}$ percentile from the $\fnl=0$ and $76.9$ mocks, respectively. Without imaging weights, the LRG sample has the highest cross-correlations against extinction, stellar density, and depth in z (solid black curve). There are less significant correlations against depth in the g and r bands, and psfsize in the z band, which could be driven because of the inner correlations between the imaging systematic maps. First, we consider cleaning the sample with the linear model using two maps (extinction and \mr{depth in z}) as identified from the Pearson correlation. With linear two maps (\mr{red dashed curve}), most of the cross power signals are reduced below statistical uncertainties, especially against extinction, stellar density, and depth. However, the cross power spectra against psfsize in r and z increases slightly on $6<\ell<20$ and $6<\ell<14$, respectively. Very likely, large-scale cross correlations ($\ell < 6$) are reduced using extinction and depth in the z-band, but there are some residual cross correlations on smaller scales ($\ell > 6$) which cannot be mitigated with our set of two maps. The linear three maps (\mr{blue dot-dashed curve}) approach alleviates the cross power spectrum against psfsize in r. On the other hand, nonlinear three maps \mr{(green dashed curve)} can reduce the cross correlations against both the r and z-band psfsize maps, which indicates the benefit of using a nonlinear approach. For benchmark, we also show the normalized cross spectra after cleaning the LRG sample with linear eight maps (\mr{orange dotted curve}) and nonlinear four maps (\mr{pink dot-dashed curve}). 
 
 \subsubsection{Mean density contrast}
 We calculate the histogram of the mean density contrast relative to the $j^{\rm th}$ imaging property, $x_{j}$:
@@ -162,9 +162,9 @@ and the total residual error as,
 \begin{equation}
 \chi^{2} = \delta_{X}^{T} \mathbb{C_{\delta}}^{-1} \delta_{X},
 \end{equation}
-where the covariance matrix $\mathbb{C}_{\delta} = < \delta_{X} \delta_{X}>$ is constructed from the lognormal mocks. Figure \ref{fig:nbarmock} shows the mean density contrast against the imaging properties for the DESI LRG targets. The dark and light shades represent the $1\sigma$ level fluctuations observed in 1000 lognormal density fields respectively with $\fnl=0$ and $76.9$. The DESI LRG targets before treatment (solid curve) exhibits a strong trend around $10\%$ against the z-band depth which is consistent with the cross power spectrum. Additionally, there are significant spurious trends against extinction and stellar density at about $5-6\%$. The linear approach is able to mitigate most of the systematic fluctuations with only extinction and depth in the z-band as input; however,  a new trend appears against the r-band psfsize map with the \textit{linear two maps} approach (dot-dashed blue curve), which is indicative of the psfsize-related systematics in our sample. This finding is in agreement with the cross power spectrum. We re-train the linear model with three maps, but we still observe around $2\%$ residual spurious fluctuations in the low ends of depth and psfsize, in the z band, which implies nonlinear systematic effects exist. We find that the imaging weights from the nonlinear model trained with the three identified maps (or four maps including the stellar density) is capable of reducing the fluctuations below $2\%$. Even with the nonlinear three maps, we have about $1\%$ remaining systematic fluctuations against the z-band psfsize. We use the $\chi^{2}$ statistics to assess how significant these fluctuations are in comparison to the clean mocks. 
+where the covariance matrix $\mathbb{C}_{\delta} = < \delta_{X} \delta_{X}>$ is constructed from the lognormal mocks. Figure \ref{fig:nbarmock} shows the mean density contrast against the imaging properties for the DESI LRG targets. The dark and light shades represent the $1\sigma$ level fluctuations observed in 1000 lognormal density fields respectively with $\fnl=0$ and $76.9$. The DESI LRG targets before treatment (solid curve) exhibits a strong trend around $10\%$ against the z-band depth which is consistent with the cross power spectrum. Additionally, there are significant spurious trends against extinction and stellar density at about $5-6\%$. The linear approach is able to mitigate most of the systematic fluctuations with only extinction and depth in the z-band as input; however, a new trend appears against the r-band psfsize map with the \textit{linear two maps} approach (\mr{red dashed curve}), which is indicative of the psfsize-related systematics in our sample. This finding is in agreement with the cross power spectrum. We re-train the linear model with three maps, but we still observe around $2\%$ residual spurious fluctuations \mr{in the low end of depth and around $1\%$ in the high end of psfsize}, in the z band, which implies nonlinear systematic effects exist. We find that the imaging weights from the nonlinear model trained with the three identified maps (or four maps including the stellar density) is capable of reducing the fluctuations below $2\%$. Even with the nonlinear three maps, we have about $1\%$ remaining systematic fluctuations against the z-band psfsize. We use the $\chi^{2}$ statistics to assess how significant these fluctuations are in comparison to the clean mocks. 
 
-\mc{DH: nothing incorrect here (apart from the comment just above), but the text just seems tedious and maybe repetitive, with lots of numbers thrown around. It would be good to give it a more streamlined rewrite. Lines 798-808 are particularly in need of a reform}. Figure \ref{fig:chi2test} shows the $\chi^{2}$ histograms from the normalized cross spectrum (top) and mean density contrast (bottom) statistics which are obtained from the $\fnl=0$ and $76.9$ lognormal mocks, respectively with solid and dashed lines. The $\chi^{2}$ tests prove to be insensitive to the true $\fnl$ of the mocks, as we obtain consistent distributions for both statistics, regardless of the true $\fnl$ used for the mock generation. No mitigation is applied to these mocks, and thus the $\chi^{2}$ values are expected to be unbiased. The $\chi^{2}$ values observed in the DESI LRG targets are shown via the vertical lines for comparison, and summarized in Table \ref{tab:chi2test}. The corresponding $p$-values are inferred from the comparison to the clean $\fnl=0$ mocks. Before cleaning, our LRG sample has a cross power spectrum $\chi^{2}$ error of $20014.8$. After correction with the linear two maps approach, the cross spectrum $\chi^{2}$ is reduced to $375.1$ with $p$-value \mr{$< 0.001$}. Adding the r-band psfsize, the linear three maps approach reduces the $\chi^{2}$ down to $195.9$ with $p$-value $=0.04$; however, we can reject the null hypothesis that our sample with the linear three maps is properly cleaned at $95\%$ confidence. Even though cleaning with linear all maps gives the lowest cross spectrum $\chi^{2}$ of $129.2$ (and $p$-value $=0.24$), it potentially makes the analysis more prone to regressing out the true clustering signal, given the inner correlations among the imaging properties (Figure \ref{fig:pcc}). As an alternative, we apply the imaging weights from the nonlinear method with the extinction, z-band depth, and r-band psfsize maps (\textit{nonlinear three maps}). The cross power spectrum $\chi^{2}$ is reduced to $79.3$ with $p$-value $=0.59$. Adding the stellar density map reduces the cross power spectrum $\chi^{2}$ error to $70.9$ ($p$-value $=0.69$). Our cross power spectrum diagnostic supports the idea that a nonlinear cleaning approach is needed to properly regress out the remaining spurious fluctuations. We investigate the test with the cross power spectrum up to higher multipoles but find no evidence of remaining systematic errors (see Appendix \ref{sec:scalesys}). 
+\mc{DH: nothing incorrect here (apart from the comment just above), but the text just seems tedious and maybe repetitive, with lots of numbers thrown around. It would be good to give it a more streamlined rewrite. Lines 798-808 are particularly in need of a reform}. Figure \ref{fig:chi2test} shows the $\chi^{2}$ histograms from the normalized cross spectrum (top) and mean density contrast (bottom) statistics which are obtained from the $\fnl=0$ and $76.9$ lognormal mocks, respectively with solid and dashed lines. The $\chi^{2}$ tests prove to be insensitive to the true $\fnl$ of the mocks, as we obtain consistent distributions for both statistics, regardless of the true $\fnl$ used for the mock generation. \mr{This provides a robust metric to separate the effect of the systematics from the effect of cosmology.} No mitigation is applied to these mocks, and thus the $\chi^{2}$ values are expected to be unbiased. The $\chi^{2}$ values observed in the DESI LRG targets are shown via the vertical lines for comparison, and summarized in Table \ref{tab:chi2test}. The corresponding $p$-values are inferred from the comparison to the clean $\fnl=0$ mocks. Before cleaning, our LRG sample has a cross power spectrum $\chi^{2}$ error of $20014.8$. After correction with the linear two maps approach, the cross spectrum $\chi^{2}$ is reduced to $375.1$ with $p$-value \mr{$< 0.001$}. Adding the r-band psfsize, the linear three maps approach reduces the $\chi^{2}$ down to $195.9$ with $p$-value $=0.04$; however, we can reject the null hypothesis that our sample with the linear three maps is properly cleaned at $95\%$ confidence. Even though cleaning with linear all maps gives the lowest cross spectrum $\chi^{2}$ of $129.2$ (and $p$-value $=0.24$), it potentially makes the analysis more prone to regressing out the true clustering signal, given the inner correlations among the imaging properties (Figure \ref{fig:pcc}). As an alternative, we apply the imaging weights from the nonlinear method with the extinction, z-band depth, and r-band psfsize maps (\textit{nonlinear three maps}). The cross power spectrum $\chi^{2}$ is reduced to $79.3$ with $p$-value $=0.59$. Adding the stellar density map reduces the cross power spectrum $\chi^{2}$ error to $70.9$ ($p$-value $=0.69$). Our cross power spectrum diagnostic supports the idea that a nonlinear cleaning approach is needed to properly regress out the remaining spurious fluctuations. We investigate the test with the cross power spectrum up to higher multipoles but find no evidence of remaining systematic errors (see Appendix \ref{sec:scalesys}). 
 
 
 
@@ -195,7 +195,7 @@ Figure \ref{fig:chi2test} (bottom) shows the mean density $\chi^{2}$ observed in
 
 
 %\mc{Ashley: I would maybe add a new subsubsection (but at least a new paragraph) to summarize the results of the subsection, as they are quite important. This is also where I would discuss the tests that were done prior to looking at the data Cell. The discussion would basically provide a strong justification for the 3 map case being the fiducial case and point out that this was decided prior to seeing the data results. (Some of the words you wrote at the beginning of section 3.5 would go instead in this summary.)}
-The mean density contrast and cross power spectrum tests presented here show the effectiveness of the different cleaning approaches for the LRG sample before measuring the galaxy power spectrum and using it to constrain $\fnl$. In other words, none of these tests require unblinding the measured power spectrum or $\fnl$ constraints. As summarized in Table \ref{tab:chi2test}, the results of these tests reveal that cleaning the LRG sample with nonlinear three maps produces statistically consistent $\chi^{2}$ values with the clean mocks, regardless of the true $\fnl$ used in the generation of the mocks. Moreover, we should not select the model with four maps, which includes stellar density, as our best model to avoid the confirmation bias, since we do not have other indicators showing this model is more reasonable than the one with three maps. On the other hand, the linear three maps approach is not able to thoroughly mitigate systematics, as characterised by $p$-value \mr{$< 0.001$} and $=0.04$, respectively, for the mean density and cross power spectrum diagnostics. Based on these findings, we identify nonlinear three maps as the optimal cleaning approach for the LRG sample and the rest of this manuscript, because including any additional imaging systematics maps could potentially further complicate the over-correction issue.
+The mean density contrast and cross power spectrum tests presented here show the effectiveness of the different cleaning approaches for the LRG sample before measuring the galaxy power spectrum and using it to constrain $\fnl$. In other words, none of these tests require unblinding the measured power spectrum or $\fnl$ constraints. As summarized in Table \ref{tab:chi2test}, the results of these tests reveal that cleaning the LRG sample with nonlinear three maps produces statistically consistent $\chi^{2}$ values with the clean mocks, regardless of the true $\fnl$ used in the generation of the mocks. \mc{HJ: there are no clear indications for the need to add the fourth map.} Moreover, we should not select the model with four maps, which includes stellar density, as our best model to avoid the confirmation bias, since we do not have other indicators showing this model is more reasonable than the one with three maps. On the other hand, \mr{considering $p=0.05$ as our threshold for clean maps,} the linear three maps approach is not able to thoroughly mitigate systematics, as characterised by $p$-value \mr{$< 0.001$} and $=0.04$, respectively, for the mean density and cross power spectrum diagnostics. Based on these findings, we identify nonlinear three maps as the optimal cleaning approach for the LRG sample and the rest of this manuscript, because including any additional imaging systematics maps could potentially further complicate the over-correction issue.
 
 
 \subsection{Calibration of \mr{over-correction} \mout{mitigation bias}}\label{ssec:calibration}
