--- a/refs.bib
+++ b/refs.bib
@@ -2023,3 +2023,100 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+
+@article{PhysRevD.23.347,
+  title = {Inflationary universe: A possible solution to the horizon and flatness problems},
+  author = {Guth, Alan H.},
+  journal = {Phys. Rev. D},
+  volume = {23},
+  issue = {2},
+  pages = {347--356},
+  numpages = {0},
+  year = {1981},
+  month = {Jan},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.23.347},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.23.347}
+}
+@article{PhysRevLett.48.1220,
+  title = {Cosmology for Grand Unified Theories with Radiatively Induced Symmetry Breaking},
+  author = {Albrecht, Andreas and Steinhardt, Paul J.},
+  journal = {Phys. Rev. Lett.},
+  volume = {48},
+  issue = {17},
+  pages = {1220--1223},
+  numpages = {0},
+  year = {1982},
+  month = {Apr},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.48.1220},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.48.1220}
+}
+
+
+@article{LINDE1982389,
+title = {A new inflationary universe scenario: A possible solution of the horizon, flatness, homogeneity, isotropy and primordial monopole problems},
+journal = {Physics Letters B},
+volume = {108},
+number = {6},
+pages = {389-393},
+year = {1982},
+issn = {0370-2693},
+doi = {https://doi.org/10.1016/0370-2693(82)91219-9},
+url = {https://www.sciencedirect.com/science/article/pii/0370269382912199},
+author = {A.D. Linde},
+abstract = {A new inflationary universe scenario is suggested, which is free of the shortcomings of the previous one and provides a possible solution of the horizon, flatness, homogeneity and isotropy problems in cosmology, and also a solution of the primordial monopole problem in grand unified theories.}
+}
+
+@ARTICLE{2010AdAst2010E..64V,
+       author = {{Verde}, Licia},
+        title = "{Non-Gaussianity from Large-Scale Structure Surveys}",
+      journal = {Advances in Astronomy},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2010,
+        month = jan,
+       volume = {2010},
+          eid = {768675},
+        pages = {768675},
+          doi = {10.1155/2010/768675},
+archivePrefix = {arXiv},
+       eprint = {1001.5217},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2010AdAst2010E..64V},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2010AdAst2010E..72C,
+       author = {{Chen}, Xingang},
+        title = "{Primordial Non-Gaussianities from Inflation Models}",
+      journal = {Advances in Astronomy},
+     keywords = {Astrophysics - Cosmology and Extragalactic Astrophysics, High Energy Physics - Phenomenology, High Energy Physics - Theory},
+         year = 2010,
+        month = jan,
+       volume = {2010},
+          eid = {638979},
+        pages = {638979},
+          doi = {10.1155/2010/638979},
+archivePrefix = {arXiv},
+       eprint = {1002.1416},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2010AdAst2010E..72C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@article{PhysRevLett.102.021302,
+  title = {Extracting Primordial Non-Gaussianity without Cosmic Variance},
+  author = {Seljak, Uro\ifmmode \check{s}\else \v{s}\fi{}},
+  journal = {Phys. Rev. Lett.},
+  volume = {102},
+  issue = {2},
+  pages = {021302},
+  numpages = {4},
+  year = {2009},
+  month = {Jan},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.102.021302},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.102.021302}
+}
+
