--- a/sections/data.tex
+++ b/sections/data.tex
@@ -6,12 +6,12 @@ DESI is designed to collect spectra of millions of LRGs covering the redshift ra
 
 
 \subsection{DESI imaging LRGs}
-Our sample of LRGs is drawn from the DESI Legacy Imaging Surveys Data Release 9 \citep[DR9;][]{dey2018overview} using the color-magnitude selection criteria designed for the DESI 1\% survey \citep{desi2023sv}, described as the Survey Validation 3 (SV3) selection in more detail in \cite{zhou2022target}. The color-magnitude selection cuts are defined in the $g$, $r$, $z$ bands in the optical and $W1$ band in the infrared, as summarized in Table \ref{tab:ts}. The selection cuts vary for each imaging survey, but they are designed to achieve a nearly consistent density of approximately $800$ galaxies per square degree across a total area of roughly $14,000$ square degrees. Table \ref{tab:imaging} summarizes the mean galaxy density and area for each region. This is accomplished despite variations in survey efficiency and photometric calibration between DECaLS and BASS+MzLS. The implementation of these selection cuts in the DESI data processing pipeline is explained in \cite{myers2022}. The redshift distribution of our galaxy sample are inferred respectively from DESI spectroscopy during the Survey Validation phase \citep{desi2023sv}, and is shown via the solid curve in Figure \ref{fig:nz}. \cite{zhou2021clustering} analyzed the DESI LRG targets and found that the redfhit evolution of the linear bias for these targets is consistent with a constant clustering amplitude and varies via $1/D(z)$, where $D(z)$ is the growth factor (as illustrated by the dashed red line in Figure \ref{fig:nz}). 
+Our sample of LRGs is drawn from the DESI Legacy Imaging Surveys Data Release 9 \citep[DR9;][]{dey2018overview} using the color-magnitude selection criteria designed for the DESI 1\% survey \citep{desi2023sv}, described as the Survey Validation 3 (SV3) selection in more detail in \cite{zhou2022target}. The color-magnitude selection cuts are defined in the $g$, $r$, $z$ bands in the optical and $W1$ band in the infrared, as summarized in Table \ref{tab:ts}. The selection cuts vary for each imaging survey, but they are designed to achieve a nearly consistent density of approximately $800$ galaxies per square degree across a total area of roughly $14,000$ square degrees. Table \ref{tab:imaging} summarizes the mean galaxy density and area for each region. This is accomplished despite variations in survey efficiency and photometric calibration between DECaLS and BASS+MzLS. The implementation of these selection cuts in the DESI data processing pipeline is explained in \cite{myers2022}. The redshift distribution of our galaxy sample are inferred respectively from DESI spectroscopy during the Survey Validation phase \citep{desi2023sv}, and is shown via the solid curve in Figure \ref{fig:nz}. \cite{zhou2021clustering} analyzed the DESI LRG targets and found that the redshift evolution of the linear bias for these targets is consistent with a constant clustering amplitude and varies via $1/D(z)$, where $D(z)$ is the growth factor (as illustrated by the dashed red line in Figure \ref{fig:nz}). 
 
 \begin{figure}
  \centering
  \includegraphics[width=0.45\textwidth]{figures/nz_lrg.pdf}
- \caption{The redshift distribution (solid line) and bias evolution (dashed line) of the DESI LRG targets. The redshift distribution is determined from DESI spectroscopy \citep{desi2023sv}. The redshift evolution of the linear bias is supported by HOD fits to the angular clustering of the DESI LRG targets \citep{zhou2021clustering}, where $D(z)$ represents the growth factor.}
+ \caption{The redshift distribution (solid line \mr{and vertical scale on the left}) and bias evolution (dashed line \mr{and vertical scale on the right}) of the DESI LRG targets. The redshift distribution is determined from DESI spectroscopy \citep{desi2023sv}. The redshift evolution of the linear bias is supported by HOD fits to the angular clustering of the DESI LRG targets \citep{zhou2021clustering}, where $D(z)$ represents the growth factor.}
  \label{fig:nz}
 \end{figure}
 
@@ -44,10 +44,10 @@ Our sample of LRGs is drawn from the DESI Legacy Imaging Surveys Data Release 9 
  \label{fig:ng}
 \end{figure*}
 
-The LRG sample is masked rigorously for foreground bright stars, bright galaxies, and clusters of galaxies\footnote{See \url{https://www.legacysurvey.org/dr9/bitmasks/} for maskbit definitions.} to further reduce stellar contamination \citep{zhou2022target}. Then, the sample is binned into \textsc{HEALPix} \citep{gorski2005healpix} pixels at $\textsc{nside}=256$ to construct the 2D density map (as shown in the top panel of Figure \ref{fig:ng}). The LRG density is corrected for the pixel incompleteness and lost areas using a catalogue of random points, hereafter referred to as randoms, uniformly scattered over the footprint with the same cuts and masks applied. Moreover, the density of galaxies is matched to the randoms separately for each of the three data sections (BASS+MzLS, DECaLS North / South) so the mean density differences are mitigated (see Table \ref{tab:imaging}). The DESI LRG targets are selected brighter than the imaging survey depth limits, e.g., $g=24.4,~r=23.8,~{\rm and}~z=22.9$ for the median $5\sigma$ detection in AB mag in the DECaLS North region (Table \ref{tab:imaging}); and thus the LRG density map does not exhibit severe spurious fluctuations.
+The LRG sample is masked rigorously for foreground bright stars, bright galaxies, and clusters of galaxies\footnote{See \url{https://www.legacysurvey.org/dr9/bitmasks/} for maskbit definitions.} to further reduce stellar contamination \citep{zhou2022target}. Then, the sample is binned into \textsc{HEALPix} \citep{gorski2005healpix} pixels at $\textsc{nside}=256$\mr{, corresponding to pixels of about $0.25$ degrees on a side,} to construct the 2D density map (as shown in the top panel of Figure \ref{fig:ng}). The LRG density is corrected for the pixel incompleteness and lost areas using a catalogue of random points, hereafter referred to as randoms, uniformly scattered over the footprint with the same cuts and masks applied. Moreover, the density of galaxies is matched to the randoms separately for each of the three data sections (BASS+MzLS, DECaLS North / South) so the mean density differences are mitigated (see Table \ref{tab:imaging}). The DESI LRG targets are selected brighter than the imaging survey depth limits, e.g., $g=24.4,~r=23.8,~{\rm and}~z=22.9$ for the median $5\sigma$ detection in AB mag in the DECaLS North region (Table \ref{tab:imaging}); and thus the LRG density map does not exhibit severe spurious fluctuations.
 
 \subsubsection{Imaging systematic maps}
-The effects of observational systematics in the DESI targets have been studied in great detail \cite[see, e.g.,][]{kitanidis2020imaging, zhou2021clustering, chaussidon2022angular}.  \cite{zhou2022target} has previously identified nine astrophysical properties as potential sources of imaging systematic errors in the DESI LRG targets. These imaging properties are mapped into \textsc{HEALPix} of \textsc{nside}$=256$. As illustrated by a $3x3$ grid in the bottom panel of Figure \ref{fig:ng}, the maps include local stellar density constructed from point-like sources with a G-band magnitude in the range $12 \leq G < 17$ from the \textit{Gaia} DR2 \citep[see,][]{gaiadr2, myers2022}; Galactic extinction E[B-V] from \cite{schlegel1998maps}; survey depth (galaxy depth in $g$, $r$, and $z$ and PSF depth in W1) and astronomical seeing (i.e., point spread function, or psfsize) in $g$, $r$, and $z$. The depth maps have been corrected for extinction using the coefficients adapted from \cite{2011ApJ...737..103S}. Table \ref{tab:imaging} summarizes the median values for the imaging properties in each region. In addition to these nine maps, we consider two external maps for the neutral hydrogen column density (HI) from \cite{2016A&A...594A.116H} and photometric calibration in the z-band (CALIBZ) from \cite{desi2023sv} to further test the robustness of our analysis against unknown systematics.
+The effects of observational systematics in the DESI targets have been studied in great detail \cite[see, e.g.,][]{kitanidis2020imaging, zhou2021clustering, chaussidon2022angular}.  \cite{zhou2022target} has previously identified nine astrophysical properties as potential sources of imaging systematic errors in the DESI LRG targets. These imaging properties are mapped into \textsc{HEALPix} of \textsc{nside}$=256$. As illustrated by the $3x3$ grid in the bottom panel of Figure \ref{fig:ng}, the maps include local stellar density constructed from point-like sources with a G-band magnitude in the range $12 \leq G < 17$ from the \textit{Gaia} DR2 \citep[see,][]{gaiadr2, myers2022}; Galactic extinction E[B-V] from \cite{schlegel1998maps}; survey depth (galaxy depth in $g$, $r$, and $z$ and PSF depth in W1) and astronomical seeing (i.e., point spread function, or psfsize) in $g$, $r$, and $z$. The depth maps have been corrected for extinction using the coefficients adapted from \cite{2011ApJ...737..103S}. Table \ref{tab:imaging} summarizes the median values for the imaging properties in each region. In addition to these nine maps, we consider two external maps for the neutral hydrogen column density (HI) from \cite{2016A&A...594A.116H} and photometric calibration in the z-band (CALIBZ) from \cite{desi2023sv} to further test the robustness of our analysis against unknown systematics.
 
 \begin{table*}
 \caption{Statistics for DESI imaging data. Median depths are for galaxy/point sources detected at $5\sigma$. Median psfsize values are computed with a depth-weighted average at each location on the sky.}
