--- a/sections/data.tex
+++ b/sections/data.tex
@@ -75,7 +75,7 @@ Median $z$ psfsize [arcsec]          & 1.2  & 1.3  & 1.3\\
 \label{tab:imaging}
 \end{table*} 
 
-The fluctuations in each imaging map are unique and tend to be correlated with the LRG density map. For instance, large-scale LRG density fluctuations can be associated with stellar density, extinction, or survey depth; while small scale-fluctuations can be related to psfsize variations. Some regions of the DR9 footprint are removed from our analysis to avoid potential photometric calibration issues. These regions are either disconnected from the main footprint (e.g., the islands in the NGC with DEC $<-10$) or calibrated using different catalogues of standard stars (e.g., DEC $<-30$ in the SGC). The potential impact of not imposing these declination cuts on the LRG sample and our $\fnl$ constraints is explored in Section \ref{sec:results}. 
+The fluctuations in each imaging map are unique and tend to be correlated with the LRG density map. For instance, large-scale LRG density fluctuations \mout{can be associated  with}\mr{could be caused by} stellar density, extinction, or survey depth; while small scale-fluctuations \mout{can be related to}\mr{could be caused by} psfsize variations. Some regions of the DR9 footprint are removed from our analysis to avoid potential photometric calibration issues. These regions are either disconnected from the main footprint (e.g., the islands in the NGC with DEC $<-10$) or calibrated using different catalogues of standard stars (e.g., DEC $<-30$ in the SGC). The potential impact of not imposing these declination cuts on the LRG sample and our $\fnl$ constraints is explored in Section \ref{sec:results}. 
 
 \begin{figure}
 \centering
@@ -85,7 +85,11 @@ The fluctuations in each imaging map are unique and tend to be correlated with t
  \label{fig:pcc}
 \end{figure}
 
-Figure \ref{fig:pcc} shows the Pearson correlation coefficient between the DESI LRG target density map and the imaging systematics maps for the three imaging regions (DECaLS North, DECaLS South, and BASS+MzLS) in the top panel. The horizontal curves represent the $95\%$ confidence regions for no correlation and are constructed by cross-correlating 100 synthetic lognormal density fields and the imaging systematic maps. \mr{Consistent among the different regions, there} are statistically significant correlations between the LRG density and depth, extinction, and stellar density. There are less significant correlations between the LRG density and the $W1$-band depth and psfsize.\mout{in DECaLS South and DECaLS North.} Figure \ref{fig:pcc} (bottom panel) shows the correlation matrix among the imaging systematics maps for the entire DESI footprint. Significant inner correlations exist among the imaging systematic maps themselves, especially between local stellar density and Galactic extinction; also, the $r$-band and $g$-band survey properties are more correlated with each other than with the $z$-band counterpart. Additionally, we compute the Spearman correlation coefficients between the LRG density and imaging systematic maps to assess whether or not the correlations are impacted by outliers in the imaging data, but find no substantial differences from Pearson.
+\mr{We employ the Pearson correlation coefficient to characterize the correlation between the galaxy and imaging properties, which for two random variables $x$ and $y$ is given by,} 
+\begin{equation}
+	\text{Pearson}~(x, y) = \frac{\sum (x_{i}-\bar{x})(y_{i}-\bar{y})}{\sqrt{\sum (x_{i}-\bar{x})^{2}\sum (y_{i}-\bar{y})^{2}}},
+\end{equation}
+\mr{where $\bar{x}$ and $\bar{y}$ represent the mean estimates of the random variables.} Figure \ref{fig:pcc} shows the Pearson correlation coefficient between the DESI LRG target density map and the imaging systematics maps for the three imaging regions (DECaLS North, DECaLS South, and BASS+MzLS) in the top panel. The horizontal curves represent the $95\%$ confidence regions for no correlation and are constructed by cross-correlating 100 synthetic lognormal density fields and the imaging systematic maps. \mr{Consistent among the different regions, there} are statistically significant correlations between the LRG density and depth, extinction, and stellar density. There are less significant correlations between the LRG density and the $W1$-band depth and psfsize.\mout{in DECaLS South and DECaLS North.} Figure \ref{fig:pcc} (bottom panel) shows the correlation matrix among the imaging systematics maps for the entire DESI footprint. Significant inner correlations exist among the imaging systematic maps themselves, especially between local stellar density and Galactic extinction; also, the $r$-band and $g$-band survey properties are more correlated with each other than with the $z$-band counterpart. Additionally, we compute the Spearman correlation coefficients between the LRG density and imaging systematic maps to assess whether or not the correlations are impacted by outliers in the imaging data, but find no substantial differences from Pearson.
 
 \subsubsection{Treatment of imaging systematics}
 There are several approaches for handling imaging systematic errors, broadly classified into data-driven and simulation-based modeling approaches \citep[see e.g.][]{ross2011, ashley2012MNRAS,Ross17,2012ApJ...761...14H,suchyta2016,delubac2016sdss, prakash2016sdss, Raichoor2017MNRAS.471.3955R, laurent2017clustering, Elvin18, 2018ApJ...863..110B, 2020MNRAS.495.1613R, kong2020,rezaie2021primordial,Everett_2022, chaussidon2022angular,Eggert_2023}. The general idea behind these approaches is to use the available data or simulations to learn or forward model the relationship between the observed target density and the imaging systematic maps, and to use this relationship, which is often described by a set of \textit{imaging weights}, to mitigate spurious fluctuations in the observed target density. Another techniques for reducing the effect of imaging systematics rely on cross-correlating different tracers of dark matter to ameliorate excess clustering signals, as each tracer might respond differently to a source of systematic error \citep[see, e.g.,][]{giannantonio2014improved}. These methods have their limitations and strengths \citep[see, e.g.,][for a review]{2021MNRAS.503.5061W}. In this paper, data-driven approaches, including linear multivariate regression and artificial neural networks, are applied to the data to correct for imaging systematic effects.
@@ -94,9 +98,9 @@ There are several approaches for handling imaging systematic errors, broadly cla
 \begin{equation}\label{eq:npred}
     N_{i} = \log ( 1 + \exp[\textbf{a}.\textbf{x}_{i}+a_{0}]),
 \end{equation}
-where $a_{0}$ is a global offset, and $\textbf{a}.\textbf{x}_{i}$ represents the inner product between the parameters, $\textbf{a}$, and the values for imaging systematics in pixel $i$, $\textbf{x}_{i}$. The functional form for $N_{i}$ is adapted to enforce the predicted galaxy counts to be positive. Then, Markov Chain Monte Carlo (MCMC) random search is performed using the \textsc{emcee} package \citep{2013PASP..125..306F} to explore the parameter space by minimizing the negative Poisson log-likelihood between the actual and predicted number counts of galaxies.
+where $a_{0}$ is a global offset, and $\textbf{a}.\textbf{x}_{i}$ represents the inner product between the parameters, $\textbf{a}$, and the values for imaging systematics in pixel $i$, $\textbf{x}_{i}$. The functional form for $N_{i}$ is adapted to enforce the predicted galaxy counts to be positive. Then, Markov Chain Monte Carlo (MCMC) \mout{random} search is performed using the \textsc{emcee} package \citep{2013PASP..125..306F} to explore the parameter space by minimizing the negative Poisson log-likelihood between the actual and predicted number counts of galaxies.
 
-No spatial coordinate is included in $\textbf{x}_{i}$ to help avoid over-correction, and as a result, the predicted number counts solely reflect the spurious density fluctuations that arise from varying imaging conditions. The number of pixels is substantially larger than the number of parameters for the linear model, and thus no training-validation-testing split is applied to the data for training the linear model. This aligns with the methodology used for training linear models in previous analyses \citep[see, e.g.,][]{zhou2022target}. The predicted galaxy counts are evaluated for each region using the marginalized mean estimates of the parameters, combined with those from other regions to cover the DESI footprint, and then normalized and inverted to represent the imaging weights into \textsc{HEALPix} of \textsc{nside} $=256$.
+\mout{No spatial coordinate is}\mr{Spatial coordinates are not} included in $\textbf{x}_{i}$ to help avoid over-correction.\mout{, and}\mr{As a result, the predicted number counts solely reflect the spurious density fluctuations that arise from varying imaging conditions.} The number of pixels is substantially larger than the number of parameters for the linear model, and thus no training-validation-testing split is applied to the data for training the linear model. This aligns with the methodology used for training linear models in previous analyses \citep[see, e.g.,][]{zhou2022target}. The predicted galaxy counts are evaluated for each region using the marginalized mean estimates of the parameters, combined with those from other regions to cover the DESI footprint\mout{, and then normalized and inverted to represent the imaging weights into \textsc{HEALPix} of \textsc{nside} $=256$}. \mr{The linear-based imaging weights are then defined as the inverse of the predicted target density, normalized to unity.}
 
 
 \textbf{Neural network model}: Our neural network-based mitigation approach uses the implementation of fully connected feedforward neural networks from \cite{rezaie2021primordial}. With the neural network approach, $\textbf{a}.\textbf{x}_{i}$ in Equation \ref{eq:npred} is replaced with $NN(\textbf{x}_{i}|\textbf{a})$, where $NN$ represents the fully connected neural network and $\textbf{a}$ denotes its parameters. The implementation, training, validation, and application of neural networks on galaxy survey data are presented in \cite{rezaie2021primordial}. We briefly summarize the methodology here. 
@@ -105,10 +109,10 @@ A fully connected feedforward neural network (also called a \textit{multi-layer 
 
 \mr{Compared with linear regression, neural networks potentially are more} prone to fitting noise, i.e., excellent performance on training data and poor performance on validation (or test) data. Therefore, our analysis uses a training-validation-testing split to avoid over-fitting and ensure that the neural network is well-optimized. Specifically, $60\%$ of the LRG data is used for training, $20\%$ is used for validation, and $20\%$ is used for testing. The split is performed randomly aside from the locations of the pixels. We also test a geometrical split in which neighboring pixels belong to the same set of training, testing, or validation, but no significant performance difference is observed.
 
-The neural networks are trained for up to 70 training epochs with the gradient descent \textsc{Adam} optimizer \citep{2017arXiv171105101L}, which iteratively updates the neural network parameters following the gradient of the negative Poisson log-likelihood. The step size of the parameter updates is controlled via the learning rate hyper-parameter, which is initialized with a grid search and is designed to dynamically vary between two boundary values of $0.001$ and $0.1$ to avoid local minima \citep[see, also,][]{2016arXiv160803983L}. At each training epoch, the neural network model is applied to the validation set, and ultimately the model with the best performance on validation is identified and applied to the test set. The neural network models are tested on the entirety of the LRG sample with the technique of permuting the choice of the training, validation, or testing sets \citep{arlot2010survey}. With the cross-validation technique, the model predictions from the different test sets are aggregated together to form the predicted target density map into the DESI footprint. To reduce the error in the predicted number counts, we train an ensemble of 20 neural network models and average over the predictions. The imaging weights are then defined as the inverse of the predicted target density, normalized to unity.
+The neural networks are trained for up to 70 training epochs with the gradient descent \textsc{Adam} optimizer \citep{2017arXiv171105101L}, which iteratively updates the neural network parameters following the gradient of the negative Poisson log-likelihood. The step size of the parameter updates is controlled via the learning rate hyper-parameter, which is initialized with a grid search and is designed to dynamically vary between two boundary values of $0.001$ and $0.1$ to avoid local minima \citep[\mr{see again,}][]{2016arXiv160803983L}. At each training epoch, the neural network model is applied to the validation set, and ultimately the model with the best performance on validation is identified and applied to the test set. The neural network models are tested on the entirety of the LRG sample with the technique of permuting the choice of the training, validation, or testing sets \citep{arlot2010survey}. With the cross-validation technique, the model predictions from the different test sets are aggregated together to form the predicted target density map into the DESI footprint. To reduce the error in the predicted number counts, we train an ensemble of 20 neural network models and average over the predictions. The imaging weights are then defined as the inverse of the predicted target density, normalized to unity.
 
 \subsection{Synthetic lognormal density fields}\label{ssec:mocks}
-Density fluctuations of galaxies on large scales can be approximated with lognormal distributions \citep{coles1991, 2017MNRAS.466.1444C}. Unlike N-body simulations, simulating lognormal density fields is not computationally intensive, and allows quick and robust validation of data analysis pipelines. Lognormal simulations are therefore considered efficient for our study since the signature of local PNG appears on large-scales and small-scale clustering is not used in our analysis. The package \textsc{FLASK} \citep[Full-sky Lognormal Astro-fields Simulation Kit;][]{Xavier_2016} is employed to generate ensembles of synthetic lognormal density maps that mimic the bias, redshift, and angular distributions of the DESI LRG targets, as illustrated in Figure \ref{fig:nz} and \ref{fig:ng}. Two universes with $\fnl=0$ and $76.9$ are considered. A set of 1000 realizations is produced for every $\fnl$. The mocks are designed to match the clustering signal of the DESI LRG targets on scales insensitive to $\fnl$. The analysis adapts the fiducial BOSS cosmology \citep{2017MNRAS.470.2617A} which assumes a flat $\Lambda$CDM universe, including one massive neutrino with $m_{\nu}=0.06$ eV, Hubble constant $h = 0.68$, matter density $\Omega_{M}=0.31$, baryon density $\Omega_{b}=0.05$, and spectral index $n_{s}=0.967$. The amplitude of the matter density fluctuations on a scale of $8 h^{-1} \text{Mpc}$ is set as $\sigma_{8}=0.8225$. The same fiducial cosmology is used throughout this paper unless specified otherwise. %\mc{Santi: how sensitive is the fnl signal to the choice of fiducial cosmology.}
+Density fluctuations of galaxies on large scales can be approximated with lognormal distributions \citep{coles1991, 2017MNRAS.466.1444C}. Unlike N-body simulations, simulating lognormal density fields is not computationally intensive, and allows quick and robust validation of data analysis pipelines. Lognormal simulations are therefore considered efficient for our study since the signature of local PNG appears on large-scales and small-scale clustering is not used in our analysis. The package \textsc{FLASK} \citep[Full-sky Lognormal Astro-fields Simulation Kit;][]{Xavier_2016} is employed to generate ensembles of synthetic lognormal density maps that mimic the bias, redshift, and angular distributions of the DESI LRG targets, as illustrated in Figure \ref{fig:nz} and \ref{fig:ng}. Two universes with $\fnl=0$ and $76.9$ are considered. A set of 1000 realizations is produced for every $\fnl$. The mocks are designed to match the clustering signal of the DESI LRG targets on scales insensitive to $\fnl$. The analysis adapts the fiducial BOSS cosmology \citep{2017MNRAS.470.2617A} which assumes a flat $\Lambda$CDM universe, including one massive neutrino with $m_{\nu}=0.06$ eV, Hubble constant $h = 0.68$, matter density $\Omega_{M}=0.31$, baryon density $\Omega_{b}=0.05$, and spectral index $n_{s}=0.967$. The amplitude of the matter density fluctuations on a scale of $8 h^{-1} \text{Mpc}$ is set as $\sigma_{8}=0.8225$. The same fiducial cosmology is used throughout this paper unless specified otherwise. \mr{Santi: how sensitive is the fnl signal to the choice of fiducial cosmology.}
 
 \subsubsection{Contaminated mocks}
 We employ a linear multivariate model to introduce synthetic spurious fluctuations in the lognormal density fields, and validate our imaging systematic mitigation methods. The motivation for choosing a linear contamination model is to assess how much of the clustering signal can be removed by applying more flexible and rigorous models, based on neural networks, for correcting less severe imaging systematic effects. The imaging systematic maps considered for the contamination model are extinction, depth in z, and psfsize in r. As shown in the Pearson correlation and will be discussed later in \S \ref{ssec:characterization}, the DESI LRG targets correlate strongly with these three maps. We fit for the parameters of the linear models with the MCMC process, executed separately on each imaging survey (BASS+MzLS, DECaLS North, and DECaLS South). Then, the imaging selection function for contaminating each simulation is uniquely determined by randomly drawing from the parameter space probed by MCMC, and then the results from each imaging survey are combined to form the DESI footprint. The clean density is then multiplied by the contamination model to induce systematics.  The same contamination model is used for both the $\fnl=0$ and $76.9$ simulations.
